More alignment fixes

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -93,3 +93,8 @@ a:hover, a:focus {
 ul, ol {
     list-style: none;
 }
+
+/*
+.navbar {
+    position: fixed;
+}*/
